--- a/BankManagementSystem/src/main/resources/application.properties
+++ b/BankManagementSystem/src/main/resources/application.properties
@@ -1,13 +1,21 @@
 spring.application.name=BankManagementSystem
-spring.datasource.url=jdbc:mysql://localhost:3306/bankdb
+server.port=6789
+
+# MySQL Database Connection
+spring.datasource.url=jdbc:mysql://localhost:3306/bankdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Root123$
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# Updated to MySQL Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.cache.type=simple
+# Caching
+#spring.cache.type=caffeine
 
-server.port=4567
-server.servlet.context-path=/bank
+# application.properties
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
